# CreativeAI_new

./: .gitignore  API_INTEGRATION_COMPLETE.md  HIRINGS_API_INTEGRATION_STATUS.md  PROJECT_STATUS.md  QUICKSTART_API_EXPLORATION.md  QUICKSTART_UV.md  README.md  SETUP_COMPLETE.md  UV_SETUP_COMPLETE.md  gradio_app.py  gradio_app_new.py  gradio_app_old.py  gradio_creator_mode.py  pyproject.toml  render.yaml  requirements.txt  requirements_api.txt  run_exploration.bat  setup_uv.bat  start_gradio_services.bat  start_services.bat  test_campaign_endpoint.py  test_hirings_connection.py  test_hoc_api.bat  test_hoc_api_uv.bat
docs/: 00_analysis_and_solutions.md  01_text_api_integration.md  02_copywriting_pipeline.md  03_image_generation_multiprompt.md  04_layout_engine.md  05_quality_gates.md  06_workflow_orchestration.md  MANUS_API.md
output/motif_library/: index.json
scripts/: README.md  check_endpoints.py  check_gemini_video.py  debug_api.py  debug_ci_hemera.py  explore_hoc_api.py  generate_atos_stuttgart_ota.py  generate_eben_ezer_lemgo.py  generate_elisabeth_salzgitter.py  generate_hochschwarzwald_personas.py  generate_kreisspital_weissenhorn.py  generate_kutzner_parsau.py  generate_landau_personas.py  generate_marien_dueren.py  generate_omnia_giessen.py  generate_vidacura_bremen.py  generate_vsr_vechta.py  generate_vsr_vechta_additional.py  generate_whcare_bremen.py  landau_manual_guide.py  manus_test_payload.json  requirements.txt  retry_albstadt_p2.py  test_albstadt_personas.py  test_api_endpoints.py  test_artistic_bad_segeberg.py  test_artistic_lebach.py  test_artistic_motifs.py  test_artistic_motifs_v2.py  test_artistic_persona1.py  test_artistic_persona2.py  test_artistic_segeberg_v2.py  test_augustenhilfe_personas.py  test_auto_quick_pipeline.py  test_bad_segeberg_personas.py  test_bfl_generation.py  test_bfl_models.py  test_bremen_personas.py  test_ci_extraction_improved.py  test_ci_quick.py  (+56 more)
src/: __init__.py
src/api/: main.py
src/config/: __init__.py  font_library.py  headline_examples.py  layout_library.py  motif_scenes.py  text_rendering_library.py
src/models/: __init__.py  hoc_api.py
src/services/: __init__.py  ci_scraping_service.py  competition_analysis_parser.py  copywriting_pipeline.py  copywriting_service.py  creative_orchestrator.py  hoc_api_client.py  i2i_overlay_service.py  image_analysis_service.py  image_generation_service.py  job_title_normalizer.py  layout_designer_service.py  logo_compositing_service.py  motif_library.py  nano_banana_service.py  research_service.py  video_animation_service.py  visual_brief_service.py
